--- a/client/src/components/nav/nav.module.css
+++ b/client/src/components/nav/nav.module.css
@@ -14,13 +14,13 @@
     padding: 2rem 5rem 0 0;
 }
 
-.li a{
+.li {
     font-family: "Poppins", sans-serif;
     font-size: 1.5rem;
     color: white;
     transition: .3s;
 }
 
-.li a:hover {
+.li:hover {
     color: rgba(0, 0, 0, 0.5);
 }
